Fixed translations bugs

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -112,20 +112,21 @@ displayYScaleTitle = T\u00EDtol de l'eix I
 
 emptyGradeColor = El color de grau buida
 
-error.fields            = Heu de completar tots els camps.
-error.generateCharts    = No es poden generar gr\u00E0fics.
-error.generatedataset   = S'ha produ\u00EFt un error en construir el conjunt de dades.
-error.host              = No es pot connectar amb l'amfitri\u00F3.
-error.login             = Nom d'usuari o contrasenya incorrectes.
-error.malformedurl      = URL mal format. Heu afegit el protocol http (s)?
-error.nocacheavaible    = Sense mem\u00F2ria cau es troba per a aquest usuari i de sistema principal
-error.nocourse          = Heu de seleccionar un curs.
-error.saveallcharts     = No es poden exportar gr\u00E0fics.
-error.savechart         = Error en desar el diagrama.
-error.saveconfiguration = Cannot save the configuration file.
-error.savecsvfiles      = No s'han pogut exportar les dades en format CSV.
-error.updateofflinemode = El curs no es pot actualitzar en mode fora de l\u00EDnia. Si us plau, sortir i entrar de nou en la manera en l\u00EDnia.
-error.userdata          = Error en recuperar les dades de l'usuari.
+error.chargeconfiguration = Error a l'importar la configuraci\u00F3
+error.fields              = Heu de completar tots els camps.
+error.generateCharts      = No es poden generar gr\u00E0fics.
+error.generatedataset     = S'ha produ\u00EFt un error en construir el conjunt de dades.
+error.host                = No es pot connectar amb l'amfitri\u00F3.
+error.login               = Nom d'usuari o contrasenya incorrectes.
+error.malformedurl        = URL mal format. Heu afegit el protocol http (s)?
+error.nocacheavaible      = Sense mem\u00F2ria cau es troba per a aquest usuari i de sistema principal
+error.nocourse            = Heu de seleccionar un curs.
+error.saveallcharts       = No es poden exportar gr\u00E0fics.
+error.savechart           = Error en desar el diagrama.
+error.saveconfiguration   = Cannot save the configuration file.
+error.savecsvfiles        = No s'han pogut exportar les dades en format CSV.
+error.updateofflinemode   = El curs no es pot actualitzar en mode fora de l\u00EDnia. Si us plau, sortir i entrar de nou en la manera en l\u00EDnia.
+error.userdata            = Error en recuperar les dades de l'usuari.
 
 failGradeColor = A falta de color de grau
 
@@ -136,6 +137,8 @@ fontColorXScaleTitle = Color de font eix X
 fontColorYScaleTitle = Color de font eix I
 
 fourthInterval = quart interval
+
+general = General
 
 generalActive = estad\u00EDstiques generals
 
@@ -720,6 +723,7 @@ text.nousers            = Sense coincid\u00E8ncies
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recents
+text.restoredefault     = Esteu segur que voleu restaurar la configuraci\u00F3 per defecte?
 text.seconds            = Segons
 text.sectionplaceholder = Portada
 text.selectedUsers      = Selected Users
