--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -112,20 +112,21 @@ displayYScaleTitle = Titel der Y-Achse
 
 emptyGradeColor = Farbe leer Grad
 
-error.fields            = Sie m\u00FCssen alle Felder ausf\u00FCllen.
-error.generateCharts    = Diagramme k\u00F6nnen nicht generiert werden.
-error.generatedataset   = Fehler beim Erstellen des Datasets.
-error.host              = Verbindung zum Host nicht m\u00F6glich.
-error.login             = Benutzername oder Passwort falsch.
-error.malformedurl      = Schlecht geformte URL. Haben Sie http (s) -Protokoll hinzugef\u00FCgt?
-error.nocacheavaible    = Kein Cache f\u00FCr diesen Benutzer und Host gefunden
-error.nocourse          = Sie m\u00FCssen einen Kurs ausw\u00E4hlen.
-error.saveallcharts     = Diagramme k\u00F6nnen nicht exportiert werden.
-error.savechart         = Fehler beim Speichern des Diagramms.
-error.saveconfiguration = Cannot save the configuration file.
-error.savecsvfiles      = Die Daten konnten nicht im CSV-Format exportiert werden.
-error.updateofflinemode = Der Kurs kann nicht im Offline-Modus aktualisiert werden. Bitte melden Sie sich ab und melden Sie sich im Online-Modus zur\u00FCck.
-error.userdata          = Fehler beim Wiederherstellen der Benutzerdaten.
+error.chargeconfiguration = Fehler bei der Konfiguration importieren
+error.fields              = Sie m\u00FCssen alle Felder ausf\u00FCllen.
+error.generateCharts      = Diagramme k\u00F6nnen nicht generiert werden.
+error.generatedataset     = Fehler beim Erstellen des Datasets.
+error.host                = Verbindung zum Host nicht m\u00F6glich.
+error.login               = Benutzername oder Passwort falsch.
+error.malformedurl        = Schlecht geformte URL. Haben Sie http (s) -Protokoll hinzugef\u00FCgt?
+error.nocacheavaible      = Kein Cache f\u00FCr diesen Benutzer und Host gefunden
+error.nocourse            = Sie m\u00FCssen einen Kurs ausw\u00E4hlen.
+error.saveallcharts       = Diagramme k\u00F6nnen nicht exportiert werden.
+error.savechart           = Fehler beim Speichern des Diagramms.
+error.saveconfiguration   = Cannot save the configuration file.
+error.savecsvfiles        = Die Daten konnten nicht im CSV-Format exportiert werden.
+error.updateofflinemode   = Der Kurs kann nicht im Offline-Modus aktualisiert werden. Bitte melden Sie sich ab und melden Sie sich im Online-Modus zur\u00FCck.
+error.userdata            = Fehler beim Wiederherstellen der Benutzerdaten.
 
 failGradeColor = Failing Grade Farbe
 
@@ -136,6 +137,8 @@ fontColorXScaleTitle = Schriftfarbe X-Achse
 fontColorYScaleTitle = Schriftfarbe Y-Achse
 
 fourthInterval = vierte Intervall
+
+general = Allgemeines
 
 generalActive = Allgemeine Statistiken
 
@@ -720,6 +723,7 @@ text.nousers            = Kein Zufall
 text.pass               = Pass
 text.past               = Past
 text.recent             = K\u00FCrzlich\r\n
+text.restoredefault     = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
 text.selectedUsers      = Selected Users
