--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -112,20 +112,21 @@ displayYScaleTitle = Title Y-axis
 
 emptyGradeColor = Color empty grade
 
-error.fields            = You have to complete all the fields.
-error.generateCharts    = Can't generate charts.
-error.generatedataset   = Error building the dataset.
-error.host              = Can't connect with host.
-error.login             = Wrong Username or password.
-error.malformedurl      = Badly formed URL. Did you add http(s) protocol?
-error.nocacheavaible    = No cache is found for this user and host
-error.nocourse          = You have to select a course.
-error.saveallcharts     = Can't export charts.
-error.savechart         = Error saving chart.
-error.saveconfiguration = Cannot save the configuration file.
-error.savecsvfiles      = The data could not be exported in CSV format.
-error.updateofflinemode = The course cannot be updated in offline mode. Please log out and log back in online mode.
-error.userdata          = Error when recovering user data.
+error.chargeconfiguration = Error when importing the configuration
+error.fields              = You have to complete all the fields.
+error.generateCharts      = Can't generate charts.
+error.generatedataset     = Error building the dataset.
+error.host                = Can't connect with host.
+error.login               = Wrong Username or password.
+error.malformedurl        = Badly formed URL. Did you add http(s) protocol?
+error.nocacheavaible      = No cache is found for this user and host
+error.nocourse            = You have to select a course.
+error.saveallcharts       = Can't export charts.
+error.savechart           = Error saving chart.
+error.saveconfiguration   = Cannot save the configuration file.
+error.savecsvfiles        = The data could not be exported in CSV format.
+error.updateofflinemode   = The course cannot be updated in offline mode. Please log out and log back in online mode.
+error.userdata            = Error when recovering user data.
 
 failGradeColor = Failing grade color
 
@@ -136,6 +137,8 @@ fontColorXScaleTitle = Font color X-axis
 fontColorYScaleTitle = Font color Y-axis
 
 fourthInterval = Fourth interval
+
+general = General
 
 generalActive = General statistics
 
@@ -720,6 +723,7 @@ text.nousers            = No coincidences
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recent
+text.restoredefault     = Are you sure you want to restore the default settings?
 text.seconds            = Seconds
 text.sectionplaceholder = Front page
 text.selectedUsers      = Selected Users
