--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -112,20 +112,21 @@ displayYScaleTitle = T\u00EDtulo del eje Y
 
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
-error.fields            = Debes completar todos los campos.
-error.generateCharts    = No se han podido generar los gr\u00E1ficos.
-error.generatedataset   = Error en la construcci\u00F3n del dataset.
-error.host              = No se ha podido conectar con el host.
-error.login             = Usuario y/o contrase\u00F1a incorrectos.
-error.malformedurl      = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
-error.nocacheavaible    = No se encunetra cach\u00E9 para este usuario y host
-error.nocourse          = Debe seleccionar un curso.
-error.saveallcharts     = No se han podido exportar los gr\u00E1ficos.
-error.savechart         = Error al gruardar el gr\u00E1fico.
-error.saveconfiguration = No se ha podido guardar el fichero de configuraci\u00F3n.
-error.savecsvfiles      = No se han podido exportar los datos en formato CSV.
-error.updateofflinemode = No se puede actualizar el curso en modo offline. Por favor, cierre sesi\u00F3n y vuelva a iniciar sesi\u00F3n en modo online
-error.userdata          = Error al recuperar los datos del usuario.
+error.chargeconfiguration = Error al importar la configuraci\u00F3n
+error.fields              = Debes completar todos los campos.
+error.generateCharts      = No se han podido generar los gr\u00E1ficos.
+error.generatedataset     = Error en la construcci\u00F3n del dataset.
+error.host                = No se ha podido conectar con el host.
+error.login               = Usuario y/o contrase\u00F1a incorrectos.
+error.malformedurl        = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
+error.nocacheavaible      = No se encunetra cach\u00E9 para este usuario y host
+error.nocourse            = Debe seleccionar un curso.
+error.saveallcharts       = No se han podido exportar los gr\u00E1ficos.
+error.savechart           = Error al gruardar el gr\u00E1fico.
+error.saveconfiguration   = No se ha podido guardar el fichero de configuraci\u00F3n.
+error.savecsvfiles        = No se han podido exportar los datos en formato CSV.
+error.updateofflinemode   = No se puede actualizar el curso en modo offline. Por favor, cierre sesi\u00F3n y vuelva a iniciar sesi\u00F3n en modo online
+error.userdata            = Error al recuperar los datos del usuario.
 
 failGradeColor = Color de calificaci\u00F3n suspensa
 
@@ -136,6 +137,8 @@ fontColorXScaleTitle = Color de fuente eje X
 fontColorYScaleTitle = Color de fuente eje Y
 
 fourthInterval = Cuarto intervalo
+
+general = General
 
 generalActive = Estad\u00EDsticas Generales
 
@@ -720,6 +723,7 @@ text.nousers            = No hay coincidencias
 text.pass               = Aprobado
 text.past               = Pasados
 text.recent             = Recientes
+text.restoredefault     = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 text.selectedUsers      = Usuarios Seleccionados
