--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -112,20 +112,21 @@ displayYScaleTitle = Titre de l'axe Y
 
 emptyGradeColor = Couleur qualit\u00E9 vide
 
-error.fields            = Vous devez remplir tous les champs.
-error.generateCharts    = Impossible de g\u00E9n\u00E9rer des graphiques.
-error.generatedataset   = Erreur lors de la construction du jeu de donn\u00E9es.
-error.host              = Impossible de se connecter avec l'h\u00F4te.
-error.login             = Mauvais nom d'utilisateur ou mot de passe.
-error.malformedurl      = URL mal form\u00E9e. Avez-vous ajout\u00E9 le protocole http (s)?
-error.nocacheavaible    = Aucun cache est trouv\u00E9 pour cet utilisateur et l'h\u00F4te
-error.nocourse          = Vous devez choisir un cours.
-error.saveallcharts     = Impossible d'exporter des graphiques.
-error.savechart         = Erreur d'enregistrement du graphique.
-error.saveconfiguration = Cannot save the configuration file.
-error.savecsvfiles      = Les donn\u00E9es n'ont pas pu \u00EAtre export\u00E9es au format CSV.
-error.updateofflinemode = Le cours ne peut pas \u00EAtre mis \u00E0 jour en mode hors ligne. S'il vous pla\u00EEt vous d\u00E9connecter et vous reconnecter en mode en ligne.
-error.userdata          = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
+error.chargeconfiguration = Erreur lors de l'importation de la configuration
+error.fields              = Vous devez remplir tous les champs.
+error.generateCharts      = Impossible de g\u00E9n\u00E9rer des graphiques.
+error.generatedataset     = Erreur lors de la construction du jeu de donn\u00E9es.
+error.host                = Impossible de se connecter avec l'h\u00F4te.
+error.login               = Mauvais nom d'utilisateur ou mot de passe.
+error.malformedurl        = URL mal form\u00E9e. Avez-vous ajout\u00E9 le protocole http (s)?
+error.nocacheavaible      = Aucun cache est trouv\u00E9 pour cet utilisateur et l'h\u00F4te
+error.nocourse            = Vous devez choisir un cours.
+error.saveallcharts       = Impossible d'exporter des graphiques.
+error.savechart           = Erreur d'enregistrement du graphique.
+error.saveconfiguration   = Cannot save the configuration file.
+error.savecsvfiles        = Les donn\u00E9es n'ont pas pu \u00EAtre export\u00E9es au format CSV.
+error.updateofflinemode   = Le cours ne peut pas \u00EAtre mis \u00E0 jour en mode hors ligne. S'il vous pla\u00EEt vous d\u00E9connecter et vous reconnecter en mode en ligne.
+error.userdata            = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
 
 failGradeColor = couleur de qualit\u00E9 \u00E0 d\u00E9faut
 
@@ -136,6 +137,8 @@ fontColorXScaleTitle = X-axe de la couleur de la police
 fontColorYScaleTitle = Font couleur axe Y
 
 fourthInterval = quatri\u00E8me intervalle
+
+general = G\u00E9n\u00E9ral
 
 generalActive = statistiques g\u00E9n\u00E9rales
 
@@ -720,6 +723,7 @@ text.nousers            = Pas de co\u00EFncidences
 text.pass               = Pass
 text.past               = Past
 text.recent             = R\u00E9cente
+text.restoredefault     = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 text.selectedUsers      = Selected Users
