--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -112,20 +112,21 @@ displayYScaleTitle = Titolo asse Y
 
 emptyGradeColor = Colore grade vuoto
 
-error.fields            = Devi completare tutti i campi.
-error.generateCharts    = Non posso generare grafici.
-error.generatedataset   = Errore durante la creazione del set di dati.
-error.host              = Impossibile connettersi con l'host.
-error.login             = Username o password errati.
-error.malformedurl      = URL mal formato. Hai aggiunto il protocollo http (s)?
-error.nocacheavaible    = Nessun cache \u00E8 trovato per questo utente e di accoglienza
-error.nocourse          = Devi selezionare un corso.
-error.saveallcharts     = Impossibile esportare i grafici.
-error.savechart         = Errore durante il salvataggio del grafico.
-error.saveconfiguration = Cannot save the configuration file.
-error.savecsvfiles      = I dati non possono essere esportati in formato CSV.
-error.updateofflinemode = Il corso non pu\u00F2 essere aggiornato in modalit\u00E0 offline. Si prega di disconnettersi e riconnettersi in modalit\u00E0 online.
-error.userdata          = Errore durante il recupero dei dati dell'utente.
+error.chargeconfiguration = Errore durante l'importazione della configurazione
+error.fields              = Devi completare tutti i campi.
+error.generateCharts      = Non posso generare grafici.
+error.generatedataset     = Errore durante la creazione del set di dati.
+error.host                = Impossibile connettersi con l'host.
+error.login               = Username o password errati.
+error.malformedurl        = URL mal formato. Hai aggiunto il protocollo http (s)?
+error.nocacheavaible      = Nessun cache \u00E8 trovato per questo utente e di accoglienza
+error.nocourse            = Devi selezionare un corso.
+error.saveallcharts       = Impossibile esportare i grafici.
+error.savechart           = Errore durante il salvataggio del grafico.
+error.saveconfiguration   = Cannot save the configuration file.
+error.savecsvfiles        = I dati non possono essere esportati in formato CSV.
+error.updateofflinemode   = Il corso non pu\u00F2 essere aggiornato in modalit\u00E0 offline. Si prega di disconnettersi e riconnettersi in modalit\u00E0 online.
+error.userdata            = Errore durante il recupero dei dati dell'utente.
 
 failGradeColor = In mancanza di colore di grado
 
@@ -136,6 +137,8 @@ fontColorXScaleTitle = Colore carattere asse X
 fontColorYScaleTitle = Carattere di colore Y
 
 fourthInterval = quarto intervallo
+
+general = Generale
 
 generalActive = statistiche generali
 
@@ -720,6 +723,7 @@ text.nousers            = Nessuna coincidenza
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recente
+text.restoredefault     = Sei sicuro di voler ripristinare le impostazioni di default?
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
 text.selectedUsers      = Selected Users
