--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -112,20 +112,21 @@ displayYScaleTitle = T\u00EDtulo do eixo Y
 
 emptyGradeColor = Cor grau vazia
 
-error.fields            = Voc\u00EA tem que completar todos os campos.
-error.generateCharts    = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
-error.generatedataset   = Erro ao construir o conjunto de dados.
-error.host              = N\u00E3o \u00E9 poss\u00EDvel conectar-se ao host.
-error.login             = Nome de usu\u00E1rio ou senha incorretos.
-error.malformedurl      = URL mal formado. Voc\u00EA adicionou o protocolo http (s)?
-error.nocacheavaible    = Sem cache \u00E9 encontrado para este usu\u00E1rio e hospedeiro
-error.nocourse          = Voc\u00EA tem que selecionar um curso.
-error.saveallcharts     = N\u00E3o \u00E9 poss\u00EDvel exportar gr\u00E1ficos.
-error.savechart         = Erro ao salvar gr\u00E1fico.
-error.saveconfiguration = Cannot save the configuration file.
-error.savecsvfiles      = Os dados n\u00E3o puderam ser exportados no formato CSV.
-error.updateofflinemode = O curso n\u00E3o pode ser atualizado no modo offline. Por favor, saia e entre novamente no modo online.
-error.userdata          = Erro ao recuperar dados do usu\u00E1rio.
+error.chargeconfiguration = Erro ao importar a configura\u00E7\u00E3o
+error.fields              = Voc\u00EA tem que completar todos os campos.
+error.generateCharts      = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
+error.generatedataset     = Erro ao construir o conjunto de dados.
+error.host                = N\u00E3o \u00E9 poss\u00EDvel conectar-se ao host.
+error.login               = Nome de usu\u00E1rio ou senha incorretos.
+error.malformedurl        = URL mal formado. Voc\u00EA adicionou o protocolo http (s)?
+error.nocacheavaible      = Sem cache \u00E9 encontrado para este usu\u00E1rio e hospedeiro
+error.nocourse            = Voc\u00EA tem que selecionar um curso.
+error.saveallcharts       = N\u00E3o \u00E9 poss\u00EDvel exportar gr\u00E1ficos.
+error.savechart           = Erro ao salvar gr\u00E1fico.
+error.saveconfiguration   = Cannot save the configuration file.
+error.savecsvfiles        = Os dados n\u00E3o puderam ser exportados no formato CSV.
+error.updateofflinemode   = O curso n\u00E3o pode ser atualizado no modo offline. Por favor, saia e entre novamente no modo online.
+error.userdata            = Erro ao recuperar dados do usu\u00E1rio.
 
 failGradeColor = Falhando cor grau
 
@@ -136,6 +137,8 @@ fontColorXScaleTitle = cor da fonte eixo X-
 fontColorYScaleTitle = Fonte cor Y-eixo
 
 fourthInterval = quarto intervalo
+
+general = Geral
 
 generalActive = estat\u00EDsticas gerais
 
@@ -720,6 +723,7 @@ text.nousers            = Sem coincid\u00EAncias
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recentes
+text.restoredefault     = Tem certeza de que deseja restaurar as configura\u00E7\u00F5es padr\u00E3o?
 text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 text.selectedUsers      = Selected Users
