Change to icon participant filter

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -736,7 +736,11 @@ thirdInterval = Tercer interval
 title.passwordChanged   = S'ha canviat la contrasenya
 title.passwordIncorrect = Contrasenya incorrecta
 
+tooltip.groups           = Grup
+tooltip.groups.          = Grup:
 tooltip.insecureprotocol = Aquesta connexi\u00F3 no \u00E9s segura.\r\nLes credencials es poden veure compromeses.
+tooltip.lastconnection   = \u00DAltim acc\u00E9s
+tooltip.rol              = Rol
 
 tooltipDecimals = informaci\u00F3 sobre eines decimal
 
