--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -736,7 +736,11 @@ thirdInterval = Terz
 title.passwordChanged   = Passwort wurde ge\u00E4ndert
 title.passwordIncorrect = Falsches Passwort
 
+tooltip.groups           = Gruppe
+tooltip.groups.          = Gruppe:
 tooltip.insecureprotocol = Diese Verbindung ist nicht sicher.\r\nAnmeldeinformationen sind m\u00F6glicherweise kompromittiert.
+tooltip.lastconnection   = Letzter Zugriff:
+tooltip.rol              = Rol
 
 tooltipDecimals = dezimal Tooltip
 
