--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -736,7 +736,11 @@ thirdInterval = Third interval
 title.passwordChanged   = Password was changed
 title.passwordIncorrect = Password incorrect
 
+tooltip.groups           = Group
+tooltip.groups.          = Group:
 tooltip.insecureprotocol = This connection is not secure.\r\nCredentials may be compromised.
+tooltip.lastconnection   = Last access
+tooltip.rol              = Rol
 
 tooltipDecimals = Decimal tooltip
 
