--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -736,7 +736,11 @@ thirdInterval = Tercer intervalo
 title.passwordChanged   = Contrase\u00F1a modificada
 title.passwordIncorrect = Contrase\u00F1a incorrecta
 
+tooltip.groups           = Grupo
+tooltip.groups.          = Grupo:
 tooltip.insecureprotocol = Esta conexi\u00F3n no es segura.\nLas credenciales pueden verse comprometidas.
+tooltip.lastconnection   = \u00DAltimo acceso
+tooltip.rol              = Rol
 
 tooltipDecimals = Informaci\u00F3n de decimales
 
