--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -736,7 +736,11 @@ thirdInterval = terzo intervallo
 title.passwordChanged   = La password \u00E8 stata cambiata
 title.passwordIncorrect = Password non corretta
 
+tooltip.groups           = Gruppo
+tooltip.groups.          = Gruppo:
 tooltip.insecureprotocol = Questa connessione non \u00E8 sicura.\r\nLe credenziali potrebbero essere compromesse.
+tooltip.lastconnection   = Ultimo accesso
+tooltip.rol              = Rol
 
 tooltipDecimals = decimale tooltip
 
