--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -736,7 +736,11 @@ thirdInterval = terceiro intervalo
 title.passwordChanged   = Senha foi alterada
 title.passwordIncorrect = Senha incorreta
 
+tooltip.groups           = Grupo
+tooltip.groups.          = Grupo:
 tooltip.insecureprotocol = Esta conex\u00E3o n\u00E3o \u00E9 segura.\r\nCredenciais podem estar comprometidas.
+tooltip.lastconnection   = \u00DAltimo acesso
+tooltip.rol              = Rol:
 
 tooltipDecimals = decimal dica
 
