--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -736,7 +736,11 @@ thirdInterval = Troisi\u00E8me intervalle
 title.passwordChanged   = Le mot de passe a \u00E9t\u00E9 chang\u00E9
 title.passwordIncorrect = Mot de passe incorrect
 
+tooltip.groups           = Groupe
+tooltip.groups.          = Groupe:
 tooltip.insecureprotocol = Cette connexion n'est pas s\u00E9curis\u00E9e.\r\nLes informations d'identification peuvent \u00EAtre compromises.
+tooltip.lastconnection   = Dernier acc\u00E8s
+tooltip.rol              = Rol
 
 tooltipDecimals = infobulle d\u00E9cimal
 
