--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -180,7 +180,7 @@ label.loggedin                    = Logged in:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrasenya antiga:
-label.participants                = N\u00BA Participants
+label.participants                = Participants
 label.pass                        = Contrasenya:
 label.rol                         = Rol:
 label.savelocal                   = S'est\u00E0 desant en local ...
@@ -646,7 +646,7 @@ log.event.zip_archive_of_folder_downloaded                      = S'ha descarreg
 
 menu.about          = Quant a l'aplicaci\u00F3
 menu.changeconfig   = Change configuration
-menu.changesubject  = Canvia el tema
+menu.changesubject  = Canvia course
 menu.clearselection = Neteja la selecci\u00F3
 menu.edit           = Edita
 menu.exit           = Sortir
@@ -704,7 +704,7 @@ tab.section            = Secci\u00F3
 tab.visualization      = Visual analytic
 
 text.all                = Tots
-text.betweendates       = Between {0} and {1} 
+text.betweendates       = Between {0} and {1} days
 text.cache              = Els arxius locals
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
