--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -180,7 +180,7 @@ label.loggedin                    = Logged in:
 label.never                       = Nicht verf\u00FCgbar
 label.of                          = von
 label.oldPassword                 = Altes Passwort:
-label.participants                = N\u00BA Teilnehmer
+label.participants                = Teilnehmer
 label.pass                        = Passwort:
 label.rol                         = Rol:
 label.savelocal                   = Speichern in lokaler ...
@@ -646,7 +646,7 @@ log.event.zip_archive_of_folder_downloaded                      = Verzeichnis wu
 
 menu.about          = \u00DCber die Bewerbung
 menu.changeconfig   = Change configuration
-menu.changesubject  = Das Thema wechseln
+menu.changesubject  = Das Thema course
 menu.clearselection = Auswahl aufheben
 menu.edit           = Bearbeiten
 menu.exit           = Ausgang
@@ -704,7 +704,7 @@ tab.section            = Abschnitt
 tab.visualization      = Visual analytic
 
 text.all                = Alles
-text.betweendates       = Between {0} and {1}
+text.betweendates       = Between {0} and {1} days
 text.cache              = Lokale Dateien
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
