--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -90,7 +90,7 @@ chartlabel.upperlimit     = Upper Limit
 
 checkbox.updatedata = Update data
 
-chk.offlinemode  = Offline Mode
+chk.offlinemode  = Offline mode
 chk.savehost     = Remember host
 chk.saveusername = Remember user
 
@@ -180,7 +180,7 @@ label.loggedin                    = Logged in:
 label.never                       = Not available
 label.of                          = of
 label.oldPassword                 = Old Password: 
-label.participants                = N\u00BA Participants
+label.participants                = Participants
 label.pass                        = Password:
 label.rol                         = Rol:
 label.savelocal                   = Saving in local...
@@ -646,7 +646,7 @@ log.event.zip_archive_of_folder_downloaded                      = Zip archive of
 
 menu.about          = About application
 menu.changeconfig   = Change configuration
-menu.changesubject  = _Change subject
+menu.changesubject  = _Change course
 menu.clearselection = Clear selection
 menu.edit           = Edit
 menu.exit           = Exit
@@ -704,7 +704,7 @@ tab.section            = Sections
 tab.visualization      = Visual analytic
 
 text.all                = All
-text.betweendates       = Between {0} and {1}
+text.betweendates       = Between {0} and {1} days
 text.cache              = Local Files
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
@@ -740,7 +740,7 @@ tooltip.groups           = Group
 tooltip.groups.          = Group:
 tooltip.insecureprotocol = This connection is not secure.\r\nCredentials may be compromised.
 tooltip.lastconnection   = Last access
-tooltip.rol              = Rol
+tooltip.rol              = Role
 
 tooltipDecimals = Decimal tooltip
 
