--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -180,7 +180,7 @@ label.loggedin                    = Inicio sesi\u00F3n:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
-label.participants                = N\u00BA Participantes
+label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
 label.rol                         = Rol:
 label.savelocal                   = Guardando en local...
@@ -646,7 +646,7 @@ log.event.zip_archive_of_folder_downloaded                      = Directorio des
 
 menu.about          = Acerca de la aplicaci\u00F3n
 menu.changeconfig   = Cambiar configuraci\u00F3n
-menu.changesubject  = _Cambiar asignatura
+menu.changesubject  = _Cambiar course
 menu.clearselection = Borrar selecci\u00F3n
 menu.edit           = Editar
 menu.exit           = Salir
