--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -180,7 +180,7 @@ label.loggedin                    = Logged in:
 label.never                       = Indisponible
 label.of                          = de
 label.oldPassword                 = Ancien mot de passe:
-label.participants                = N\u00BA Participants
+label.participants                = Participants
 label.pass                        = Mot de passe:
 label.rol                         = Rol:
 label.savelocal                   = \u00C9conomiser en local ...
@@ -704,7 +704,7 @@ tab.section            = Section
 tab.visualization      = Visual analytic
 
 text.all                = Tout
-text.betweendates       = Between {0} and {1}
+text.betweendates       = Between {0} and {1} days
 text.cache              = Fichiers locaux
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
