--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -180,7 +180,7 @@ label.loggedin                    = Logged in:
 label.never                       = Non disponibile
 label.of                          = di
 label.oldPassword                 = Vecchia password:
-label.participants                = N\u00BA partecipanti
+label.participants                = partecipanti
 label.pass                        = La password:
 label.rol                         = Rol:
 label.savelocal                   = Salvataggio in locale ...
@@ -646,7 +646,7 @@ log.event.zip_archive_of_folder_downloaded                      = L'archivio zip
 
 menu.about          = Informazioni sull'applicazione
 menu.changeconfig   = Change configuration
-menu.changesubject  = Cambia materia
+menu.changesubject  = Cambia course
 menu.clearselection = Cancella selezione
 menu.edit           = modificare
 menu.exit           = Uscita
@@ -704,7 +704,7 @@ tab.section            = Sezione
 tab.visualization      = Visual analytic
 
 text.all                = Tutti
-text.betweendates       = Between {0} and {1}
+text.betweendates       = Between {0} and {1} days
 text.cache              = File locali
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
