--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -180,7 +180,7 @@ label.loggedin                    = Logged in:
 label.never                       = N\u00E3o dispon\u00EDvel
 label.of                          = do
 label.oldPassword                 = Senha Antiga:
-label.participants                = N\u00BA Participantes
+label.participants                = Participantes
 label.pass                        = Senha:
 label.rol                         = Rol:
 label.savelocal                   = Salvando em locais ...
@@ -646,7 +646,7 @@ log.event.zip_archive_of_folder_downloaded                      = Foi descarrega
 
 menu.about          = Sobre a aplica\u00E7\u00E3o
 menu.changeconfig   = Change configuration
-menu.changesubject  = Mudar de assunto
+menu.changesubject  = Mudar de course
 menu.clearselection = Sele\u00E7\u00E3o clara
 menu.edit           = Editar
 menu.exit           = Sa\u00EDda
@@ -704,7 +704,7 @@ tab.section            = Se\u00E7\u00E3o
 tab.visualization      = Visual analytic
 
 text.all                = Todos
-text.betweendates       = Between {0} and {1}
+text.betweendates       = Between {0} and {1} days
 text.cache              = Ficheiros locais
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
@@ -740,7 +740,7 @@ tooltip.groups           = Grupo
 tooltip.groups.          = Grupo:
 tooltip.insecureprotocol = Esta conex\u00E3o n\u00E3o \u00E9 segura.\r\nCredenciais podem estar comprometidas.
 tooltip.lastconnection   = \u00DAltimo acesso
-tooltip.rol              = Rol:
+tooltip.rol              = Rol
 
 tooltipDecimals = decimal dica
 
