Added status bar

--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -646,7 +646,7 @@ log.event.zip_archive_of_folder_downloaded                      = Directorio des
 
 menu.about          = Acerca de la aplicaci\u00F3n
 menu.changeconfig   = Cambiar configuraci\u00F3n
-menu.changesubject  = _Cambiar course
+menu.changesubject  = _Cambiar curso
 menu.clearselection = Borrar selecci\u00F3n
 menu.edit           = Editar
 menu.exit           = Salir
