Added support for quartiles in heatmap

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -744,6 +744,8 @@ tooltip.rol              = Rol
 
 tooltipDecimals = informaci\u00F3 sobre eines decimal
 
+useQuartile = Cmb quartils
+
 zeroLineColor = color de la l\u00EDnia zero
 
 zeroLineWidth = ample de l\u00EDnia Zero
