--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -744,6 +744,8 @@ tooltip.rol              = Rol
 
 tooltipDecimals = dezimal Tooltip
 
+useQuartile = Mit Quartile
+
 zeroLineColor = Nullinie Farbe
 
 zeroLineWidth = Nulllinienbreite
