--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -744,6 +744,8 @@ tooltip.rol              = Role
 
 tooltipDecimals = Decimal tooltip
 
+useQuartile = With quartiles
+
 zeroLineColor = Zero line color
 
 zeroLineWidth = Zero line width
