--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -744,6 +744,8 @@ tooltip.rol              = Rol
 
 tooltipDecimals = Informaci\u00F3n de decimales
 
+useQuartile = Con cuartiles
+
 zeroLineColor = Color de la l\u00EDnea cero
 
 zeroLineWidth = Ancho de l\u00EDnea cero
