--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -744,6 +744,8 @@ tooltip.rol              = Rol
 
 tooltipDecimals = infobulle d\u00E9cimal
 
+useQuartile = Cvec quartiles
+
 zeroLineColor = Couleur de la ligne z\u00E9ro
 
 zeroLineWidth = largeur de la ligne z\u00E9ro
