--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -744,6 +744,8 @@ tooltip.rol              = Rol
 
 tooltipDecimals = decimale tooltip
 
+useQuartile = Con quartili
+
 zeroLineColor = Colore della linea Zero
 
 zeroLineWidth = larghezza linea zero
