--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -744,6 +744,8 @@ tooltip.rol              = Rol
 
 tooltipDecimals = decimal dica
 
+useQuartile = Com quartis
+
 zeroLineColor = Zero cor de linha
 
 zeroLineWidth = largura da linha de zero
